# ComicRAG

./: .gitignore  README.md  app.py  config.json  config.py  generate_caption_ollama.py  main.py  make_db.py  pyproject.toml  rag.py  rag_anything.py  util.py
RAG/: rag.py
captioner/: chunking.py  generate_caption.py  generate_caption_gemma.py  generate_caption_ollama.py  generate_caption_qwen.py  generate_deepseek_caption.py  model.py  prompts.py
captioner/finetuning/: evaluate_model.py  finetune.py  train_utils.py
captioner/finetuning/data/: get_data_to_label.py  label_data.py  tags.py
utils/: merge_panel_captions.py  util.py
vector_db/: make_db.py
