[project]
name = "comicrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "accelerate>=1.10.1",
    "attrdict>=2.0.1",
    "chroma>=0.2.0",
    "chromadb>=1.3.5",
    "einops>=0.8.1",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "ollama>=0.6.1",
    "open-clip-torch>=3.2.0",
    "pillow>=11.3.0",
    "raganything>=0.0.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.2.2",
    "transformers>=4.57.3",
    "numpy>=1.26.4,<2.0.0",
    "openai>=1.34.0,<2.0.0",
    "lightrag-hku",
]

[tool.uv.extra-build-dependencies]
autoawq = ["torch"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
# Define the custom index URL
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'"
]


