[project]
name = "comicrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "attrdict>=2.0.1",
    "bitsandbytes>=0.49.2",
    "chroma>=0.2.0",
    "chromadb>=1.3.5",
    "einops>=0.8.1",
    "flagembedding>=1.3.5",
    "gradio>=3.36.1",
    "jina>=3.34.0",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "matplotlib>=3.10.8",
    "numpy>=2.0.2",
    "ollama>=0.6.1",
    "open-clip-torch>=3.2.0",
    "openai>=2.8.1",
    "outlines>=1.2.9",
    "pillow>=11.3.0",
    "qwen-vl-utils>=0.0.14",
    "ragas>=0.4.3",
    "sentence-transformers>=5.1.2",
    "setuptools>=80.9.0",
    "torch>=2.6.0",
    "transformers==4.57.3",
    "trl>=1.1.0",
]

[tool.uv.sources]
torch = {index = "pytorch-cuda"}

# Define the custom index URL
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


